# SL-Scene-Builder

./: .gitignore  Cargo.toml  README.md  index.css  index.html  package-lock.json  package.json  stage.css  stage.html  vite.config.js
scripts/: convert.py
src/: App.css  App.jsx  Dark.css  Stage.js  defaultstyle.css  index.html  main.js  stage.css  stage.html  stage.js  stage.jsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: data.rs  define.rs  furniture.rs  main.rs  racekeys.rs
src-tauri/src/Position/: define.rs
src-tauri/src/define/: mod.rs  position.rs  project.rs  scene.rs  serialize.rs  stage.rs
src-tauri/src/scene/: mod.rs  position.rs  project.rs  scene.rs  stage.rs
src/common/: Furniture.tsx  RaceKeys.tsx  Tags.tsx
src/graph/: StartAnimation.tsx
src/scene/: SceneEdge.jsx  SceneNode.css  SceneNode.jsx
src/stage/: PositionField.css  PositionField.jsx  TagMenu.tsx
src/util/: StartAnimation.tsx  useStartAnim.tsx  useStringHandler.tsx
