[package]
name = "scene_builder"
version = "1.2.0"
description = "Tool to aid creating and maintaing SL animations"
authors = ["Scrab Joséline, I unpause"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
tauri = { version = "1.4.0", features = ["cli", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = "1.0.4"
rand = "0.8.5"
once_cell = "1.17.1"
nanoid = "0.4.0"
bitflags = "2.3.3"
fern = "0.6.2"
log = "0.4.19"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
